package bridge;

message Item {
	required int64 item_id = 1;
	required string description = 2;
	required int32 amount = 3;
}

message Package {
	required int32 warehouse_id = 1;
	optional int64 ups_user_id = 2;
	required int32 x = 3;
	required int32 y = 4;
	repeated Item items = 5;
}

message UCommands {
	repeated Package package_id_req = 1;
	optional RequestTruck truck_req = 2;
	optional PackagesLoaded loaded = 3;
}

message UResponses {
	optional string error = 1;
	repeated ResponsePackageId package_ids = 2;
}

message ACommands {
	optional TruckArrival arrival = 1;
}

message AResponses {
	optional string error = 1;
}

message ResponsePackageId {
	required int64 package_id =1;
	optional string error = 2;
}

message RequestTruck {
	required int32 warehouse_id = 1;
}

message TruckArrival {
	required int32 truck_id = 1;
	required int32 warehouse_id = 2;
}

message PackagesLoaded {
	repeated int64 package_ids = 1;
	required int32 truck_id = 2;
}
